--- a/src/Application/Mall/Template/View/tabAddCode.html
+++ b/src/Application/Mall/Template/View/tabAddCode.html
@@ -13,8 +13,7 @@
 			<li><a href="#detail" role="tab" data-toggle="tab"><literal>{:L('tab_content')}</literal></a></li>
 		</ul>
 
-
-		<form action="" method="post" id="myform" name="myform" enctype="multipart/form-data">
+		<form action="<literal>{:U('insert')}</literal>{:U('insert')}" method="post" id="myform" name="myform" enctype="multipart/form-data">
 		<div class="tab-content">
 			<div class="tab-pane active" id="general">
 				<table class="insert-tab" width="100%">
