--- a/src/Application/Mall/Template/View/tabEditCode.html
+++ b/src/Application/Mall/Template/View/tabEditCode.html
@@ -14,7 +14,7 @@
 		</ul>
 
 
-		<form action="" method="post" id="myform" name="myform" enctype="multipart/form-data">
+		<form action="<literal>{:U('update')}</literal>" method="post" id="myform" name="myform" enctype="multipart/form-data">
 		<div class="tab-content">
 			<div class="tab-pane active" id="general">
 				<table class="insert-tab" width="100%">
