--- a/src/Application/Mall/Template/View/tabAddCode.html
+++ b/src/Application/Mall/Template/View/tabAddCode.html
@@ -41,7 +41,7 @@
                 <table class="table table-hover" width="90%" id="detail-table">
                     <tr>
                         <td><div class="col-md-9"> 
-                            <script id="rich_text_area" name="content" type="text/plain" style="width:810px; height:360px;"></script> 
+                            <script id="rich_text_area" name="data[content]" type="text/plain" style="width:810px; height:360px;"></script> 
                         </div></td>
                     </tr>
                 </table>
