--- a/src/Application/Mall/Template/View/tabEditCode.html
+++ b/src/Application/Mall/Template/View/tabEditCode.html
@@ -35,14 +35,6 @@
                         </tr>{$enter}
 </if>
 </foreach>
-                        <tr>
-                            <th></th>
-                            <td>
-                                <input type="hidden" name="{$ID}" value="<literal>{$info</literal>['{$ID}']}" />
-                                <input class="btn btn-primary btn6 mr10" value="<literal>{:L('button_submit')}</literal>" type="submit">
-                                <input class="btn btn6" onclick="history.go(-1)" value="<literal>{:L('button_return')}</literal>" type="button">
-                            </td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -50,7 +42,7 @@
                 <table class="table table-hover" width="90%" id="detail-table">
                     <tr>
                         <td><div class="col-md-9"> 
-                            <script id="rich_text_area" name="content" type="text/plain" style="width:810px; height:360px;"><literal>{$info['content']}</literal></script> 
+                            <script id="rich_text_area" name="data[content]" type="text/plain" style="width:810px; height:360px;"><literal>{$info['content']}</literal></script> 
                         </div></td>
                     </tr>
                 </table>
